--- a/ManagementSystem/ManagementSystem/Views/AppView.axaml
+++ b/ManagementSystem/ManagementSystem/Views/AppView.axaml
@@ -7,7 +7,50 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="ManagementSystem.Views.AppView"
              x:DataType="vm:AppViewModel">
-    <Grid>
+    <UserControl.Styles>
+        <Style Selector="Border.LoadSpin">
+            <Style.Animations>
+                <Animation Duration="0:0:1" IterationCount="INFINITE">
+                    <KeyFrame Cue="0%">
+                        <Setter Property="RotateTransform.Angle" Value="0.0"/>
+                    </KeyFrame>
+                    <KeyFrame Cue="100%">
+                        <Setter Property="RotateTransform.Angle" Value="360.0"/>
+                    </KeyFrame>
+                </Animation>
+            </Style.Animations>
+        </Style>
+    </UserControl.Styles>
+    
+    <Grid Name="ContentGrid">
+        <Panel IsVisible="{Binding NavigationService, Converter={x:Static ObjectConverters.IsNull}}"
+               Name="LoadPanel"
+               Background="White" 
+               HorizontalAlignment="Stretch"
+               VerticalAlignment="Stretch"
+               ZIndex="1">
+            <StackPanel Orientation="Horizontal" Spacing="10"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center">
+                <TextBlock Text="{Binding Status}"
+                           VerticalAlignment="Center"/>
+                <Border Classes="LoadSpin" 
+                        BorderThickness="3"
+                        CornerRadius="10"
+                        Width="16"
+                        Height="16"
+                        VerticalAlignment="Center">
+                    <Border.BorderBrush>
+                        <LinearGradientBrush >
+                            <LinearGradientBrush.GradientStops>
+                                <GradientStop Offset="0" Color="Black"></GradientStop>
+                                <GradientStop Offset="1" Color="Transparent"></GradientStop>
+                            </LinearGradientBrush.GradientStops>
+                        </LinearGradientBrush>
+                    </Border.BorderBrush>
+                </Border>
+            </StackPanel>
+        </Panel>
         <ContentControl Content="{Binding NavigationService.CurrentViewModel}" IsVisible="{Binding NavigationService.CurrentViewModel, Converter={x:Static ObjectConverters.IsNotNull}}"/>
         <ContentControl IsVisible="{Binding NavigationService.CurrentViewModel, Converter={x:Static ObjectConverters.IsNull}}">
             <views:EmptyView></views:EmptyView>
