--- a/ManagementSystem/ManagementSystem/Views/Auth/SignOutView.axaml
+++ b/ManagementSystem/ManagementSystem/Views/Auth/SignOutView.axaml
@@ -4,8 +4,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:vm="clr-namespace:ManagementSystem.ViewModels.Auth"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="ManagementSystem.Views.Auth.SignInView"
-             x:DataType="vm:SignInViewModel">
+             x:Class="ManagementSystem.Views.Auth.SignOutView"
+             x:DataType="vm:SignOutViewModel">
     <Panel Background="{StaticResource ResourceKey=DarkerColor}">
         <Border HorizontalAlignment="Center"
                 VerticalAlignment="Center"
@@ -15,50 +15,31 @@
                 MinWidth="250">
             <Grid RowDefinitions="Auto * Auto">
                 <TextBlock Grid.Row="0"
-                           Text="Sign In"
+                           Text="Sign Out"
                            Foreground="{StaticResource DarkerColor}"
                            FontSize="18"
                            FontWeight="Bold"
                            TextAlignment="Center"
                            VerticalAlignment="Center"
                            Margin="5"/>
-                <StackPanel Grid.Row="1"
-                            Spacing="10"
-                            Orientation="Vertical"
-                            Margin="5 10 5 20">
-                    <StackPanel Spacing="0"
-                                Orientation="Vertical">
-                        <TextBlock Text="login"
-                                   FontSize="12"/>
-                        <TextBox Watermark="example@mail.com"
-                                 FontSize="14"
-                                 Text="{Binding Login}"/>
-                    </StackPanel>
-                    <StackPanel Spacing="0"
-                                Orientation="Vertical">
-                        <TextBlock Text="password"
-                                   FontSize="12"/>
-                        <TextBox Watermark="Your password..."
-                                 FontSize="14"
-                                 PasswordChar="*"
-                                 Text="{Binding Password}"/>
-                    </StackPanel>
-                </StackPanel>
+                <TextBlock Grid.Row="1"
+                           Text="Do you really want to sign out?"
+                           Margin="5 10 5 20"/>
                 <Grid Grid.Row="2"
                       ColumnDefinitions="* 2 Auto">
                     <Button Grid.Column="0"
                             HorizontalAlignment="Center"
                             VerticalAlignment="Center"
-                            Content="Sign In"
+                            Content="Yes"
                             FontSize="14"
                             FontWeight="Bold"
                             Padding="20 5"
                             Foreground="{StaticResource DarkerColor}"
-                            Command="{Binding SignInCommand}"/>
+                            Command="{Binding SignOutCommand}"/>
                     <Panel Grid.Column="1"
                            Background="{StaticResource DarkerColor}"/>
                     <Button Grid.Column="2" 
-                            Content="Back"
+                            Content="No"
                             Classes="Flat"
                             VerticalAlignment="Center"
                             HorizontalAlignment="Center"
