--- a/ManagementSystem/ManagementSystem/Views/Main/MainViewNavigation.axaml
+++ b/ManagementSystem/ManagementSystem/Views/Main/MainViewNavigation.axaml
@@ -5,6 +5,7 @@
              xmlns:main="clr-namespace:ManagementSystem.ViewModels.Main"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="ManagementSystem.Views.Main.MainViewNavigation"
+             xmlns:local="clr-namespace:ManagementSystem.Assets"
              x:DataType="main:MainViewModel">
     <Panel Background="{StaticResource ResourceKey=DarkerColor}">
         <Grid RowDefinitions="Auto *" Margin="5">
@@ -24,7 +25,7 @@
                            Height="32"
                            DockPanel.Dock="Left"
                            Margin="5 0"/>
-                    <TextBlock Text="ManagementSystem"
+                    <TextBlock Text="{Binding Source={x:Static local:StaticResources.AppName}}"
                                FontSize="16"
                                FontWeight="Bold"
                                VerticalAlignment="Center"/>
@@ -35,6 +36,9 @@
                         Spacing="10"
                         Orientation="Vertical">
                 <Button Content="Products"
+                        HorizontalContentAlignment="Center"
+                        FontSize="14"/>
+                <Button Content="Warehouse"
                         HorizontalContentAlignment="Center"
                         FontSize="14"/>
                 <Button Content="Basket"
