--- a/ManagementSystem/ManagementSystem/Views/Main/MainView.axaml
+++ b/ManagementSystem/ManagementSystem/Views/Main/MainView.axaml
@@ -13,37 +13,40 @@
         <views:MainViewNavigation Grid.Column="0"/>
         <Grid Grid.Column="1" 
               RowDefinitions="Auto *">
-            <DockPanel Grid.Row="0"
-                       MaxHeight="55">
-                <StackPanel IsVisible="{Binding UserStorageService.CurrentUser, 
-                                        Converter={x:Static ObjectConverters.IsNull}}"
-                            Spacing="10"
-                            Orientation="Horizontal"
-                            DockPanel.Dock="Right">
-                    <Button Content="Sign In"
-                            Command="{Binding GoToSignInCommand}"/>
-                    <Button Content="Sign Up"
-                            Command="{Binding GoToSignUpCommand}"/>
-                </StackPanel>
-                <Button Content="Sign Out" IsVisible="{Binding UserStorageService.CurrentUser, 
-                                                        Converter={x:Static ObjectConverters.IsNotNull}}"
-                        DockPanel.Dock="Right"
-                        Margin="5 0"
-                        Command="{Binding GoToSignOutCommand}"/>
-                <TextBlock Text="{Binding UserStorageService.CurrentUser.FullName, StringFormat='User: \{0}'}"
-                           IsVisible="{Binding UserStorageService.CurrentUser,
-                                        Converter={x:Static ObjectConverters.IsNotNull}}"
-                           TextAlignment="Right"
-                           VerticalAlignment="Center"
-                           FontSize="18"
-                           TextDecorations="Underline"
-                           FontWeight="Bold"
-                           Foreground="#668705"
-                           Margin="0 0 10 0"/>
-            </DockPanel>
+            <Panel Grid.Row="0" 
+                   Background="{StaticResource DarkerColor}">
+                <DockPanel Margin="10">
+                    <StackPanel IsVisible="{Binding UserStorageService.CurrentUser, 
+                                            Converter={x:Static ObjectConverters.IsNull}}"
+                                Spacing="10"
+                                Orientation="Horizontal"
+                                DockPanel.Dock="Right">
+                        <Button Content="Sign In"
+                                Command="{Binding GoToSignInCommand}"/>
+                        <Button Content="Sign Up"
+                                Command="{Binding GoToSignUpCommand}"/>
+                    </StackPanel>
+                    <Button Content="Sign Out" IsVisible="{Binding UserStorageService.CurrentUser, 
+                                                            Converter={x:Static ObjectConverters.IsNotNull}}"
+                            DockPanel.Dock="Right"
+                            Margin="5 0"
+                            Command="{Binding GoToSignOutCommand}"/>
+                    <TextBlock Text="{Binding UserStorageService.CurrentUser.FullName, StringFormat='User: \{0}'}"
+                               IsVisible="{Binding UserStorageService.CurrentUser,
+                                            Converter={x:Static ObjectConverters.IsNotNull}}"
+                               TextAlignment="Right"
+                               VerticalAlignment="Center"
+                               FontSize="18"
+                               FontWeight="Bold"
+                               Foreground="White"
+                               FontStyle="Italic"
+                               Margin="0 0 10 0"/>
+                </DockPanel>
+            </Panel>
             <ContentControl Grid.Row="1"
                             Content="{Binding SubNavigationService.CurrentViewModel}"
-                            Margin="10"/>
+                            Padding="10"
+                            Background="{StaticResource SaladColor}"/>
         </Grid>
     </Grid>
 </UserControl>
