--- a/ManagementSystem/ManagementSystem/Views/Products/CreateProductView.axaml
+++ b/ManagementSystem/ManagementSystem/Views/Products/CreateProductView.axaml
@@ -2,7 +2,113 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:vm="clr-namespace:ManagementSystem.ViewModels.Products"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="ManagementSystem.Views.Products.CreateProductView">
-    Welcome to Avalonia!
+             x:Class="ManagementSystem.Views.Products.CreateProductView"
+             x:DataType="vm:CreateProductViewModel">
+    <ScrollViewer HorizontalScrollBarVisibility="Disabled">
+        <Grid RowDefinitions="Auto Auto Auto">
+            <Border Grid.Row="0"
+                    Padding="20"
+                    CornerRadius="8"
+                    Background="{StaticResource LighterColor}"
+                    MinWidth="250"
+                    HorizontalAlignment="Center">
+                <Border.Effect>
+                    <DropShadowEffect OffsetX="5"
+                                      OffsetY="5"
+                                      Color="Black"/>
+                </Border.Effect>
+                <StackPanel Spacing="10"
+                            Orientation="Vertical">
+                    <TextBlock Text="Product data"
+                               FontWeight="Bold"
+                               FontSize="18"
+                               TextAlignment="Center"
+                               Margin="0 10"/>
+                    <StackPanel Spacing="0"
+                                Orientation="Vertical">
+                        <TextBlock Text="title"/>
+                        <TextBox Watermark="Title of product"/>
+                    </StackPanel>
+                    <StackPanel Spacing="0"
+                                Orientation="Vertical">
+                        <TextBlock Text="description"/>
+                        <TextBox Watermark="Description of product"
+                                 TextWrapping="Wrap"
+                                 MaxHeight="150"/>
+                    </StackPanel>
+                    <StackPanel Spacing="0"
+                                Orientation="Vertical">
+                        <TextBlock Text="cost"/>
+                        <TextBox Watermark="Cost of product"/>
+                    </StackPanel>
+                    <StackPanel Spacing="0"
+                                Orientation="Vertical">
+                        <TextBlock Text="category"/>
+                        <ComboBox PlaceholderText="product category"/>
+                    </StackPanel>
+                </StackPanel>
+            </Border>
+            <Panel Grid.Row="1"
+                   Background="{StaticResource LighterColor}"
+                   MinWidth="500"
+                   Margin="0 20">
+                <Grid RowDefinitions="Auto *" 
+                      Margin="20">
+                    <DockPanel Grid.Row="0">
+                        <Button DockPanel.Dock="Right"
+                                Padding="20 5"
+                                Content="Add photo"
+                                Command="{Binding AddProductPhotoCommand}"/>
+                        <TextBlock Text="Product photo"
+                                   FontStyle="Italic"
+                                   FontSize="18"
+                                   FontWeight="Bold"/>
+                    </DockPanel>
+                    <TextBlock Grid.Row="1"
+                               Text="Photos is empty"
+                               FontSize="14"
+                               HorizontalAlignment="Center"
+                               VerticalAlignment="Center"
+                               IsVisible="{Binding Model.ImagesIsEmpty}"/>
+                    <ItemsControl Grid.Row="1"
+                                  ItemsSource="{Binding Model.Images}"
+                                  IsVisible="{Binding !Model.ImagesIsEmpty}">
+                        <ItemsControl.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <WrapPanel Orientation="Horizontal"/>
+                            </ItemsPanelTemplate>
+                        </ItemsControl.ItemsPanel>
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+                                <Image Width="250"
+                                       Height="250"
+                                       Stretch="Uniform"
+                                       Source="{Binding .}"/>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
+                </Grid>
+            </Panel>
+            <Grid Grid.Row="2"
+                  ColumnDefinitions="* 2 Auto">
+                <Button Grid.Column="0"
+                        Content="Save"
+                        Padding="20 5"
+                        Margin="20 2.5"
+                        VerticalAlignment="Center"
+                        HorizontalAlignment="Right"/>
+                <Panel Grid.Column="1"
+                       Background="{StaticResource DarkerColor}"/>
+                <Button Grid.Column="2"
+                        Classes="Flat"
+                        Content="Cansel"
+                        Padding="10 5"
+                        VerticalAlignment="Center"
+                        HorizontalAlignment="Center"
+                        Command="{Binding CanselCommand}"/>
+            </Grid>
+        </Grid>
+    </ScrollViewer>
 </UserControl>
