--- a/ManagementSystem/ManagementSystem/Views/Products/CreateProductView.axaml
+++ b/ManagementSystem/ManagementSystem/Views/Products/CreateProductView.axaml
@@ -11,25 +11,17 @@
         <converter:BytesImageConverter x:Key="ImageConverter"/>
     </UserControl.Resources>
     <ScrollViewer HorizontalScrollBarVisibility="Disabled">
-        <Grid RowDefinitions="Auto Auto Auto"
+        <Grid RowDefinitions="* * Auto"
               Margin="0 0 25 0">
-            <Border Grid.Row="0"
-                    Padding="20"
-                    CornerRadius="8"
-                    Background="{StaticResource LighterColor}"
-                    MinWidth="250"
-                    HorizontalAlignment="Center">
-                <Border.Effect>
-                    <DropShadowEffect OffsetX="5"
-                                      OffsetY="5"
-                                      Color="Black"/>
-                </Border.Effect>
+            <Panel Grid.Row="0"
+                   Background="{StaticResource LighterColor}"
+                   MinWidth="250">
                 <StackPanel Spacing="10"
-                            Orientation="Vertical">
+                            Orientation="Vertical"
+                            Margin="25">
                     <TextBlock Text="Product data"
                                FontWeight="Bold"
                                FontSize="18"
-                               TextAlignment="Center"
                                Margin="0 10"/>
                     <StackPanel Spacing="0"
                                 Orientation="Vertical">
@@ -48,13 +40,13 @@
                         <TextBlock Text="cost"/>
                         <TextBox Watermark="Cost of product"/>
                     </StackPanel>
-                    <StackPanel Spacing="0"
+                    <StackPanel Spacing="30"
                                 Orientation="Vertical">
                         <TextBlock Text="category"/>
                         <ComboBox PlaceholderText="product category"/>
                     </StackPanel>
                 </StackPanel>
-            </Border>
+            </Panel>
             <Panel Grid.Row="1"
                    Background="{StaticResource LighterColor}"
                    MinWidth="500"
@@ -90,7 +82,8 @@
                                 <Image Width="250"
                                        Height="250"
                                        Stretch="Uniform"
-                                       Source="{Binding ., Converter={StaticResource ImageConverter}}"/>
+                                       Source="{Binding ., Converter={StaticResource ImageConverter}}"
+                                       Margin="0 0  25 0"/>
                             </DataTemplate>
                         </ItemsControl.ItemTemplate>
                     </ItemsControl>
@@ -109,9 +102,11 @@
                 <Button Grid.Column="2"
                         Classes="Flat"
                         Content="Cansel"
+                        Margin="10 0 0 0"
                         Padding="10 5"
                         VerticalAlignment="Center"
                         HorizontalAlignment="Center"
+                        Foreground="Black"
                         Command="{Binding CanselCommand}"/>
             </Grid>
         </Grid>
